--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -20,7 +20,7 @@
 
 <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-<title>TreeOfLife</title>
+<title>Lifestyle Health and Fitness Form</title>
 </head>
 
 <body>
